test/spec_vectors/simd_f32x4_rounding/fail/module_22.wat
(module (func $f32x4.floor-arg-empty (result v128) (f32x4.floor)))